<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/create_project_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/favourite_margin"
        android:layout_marginRight="@dimen/favourite_margin"
        android:ems="10"
        android:hint="@string/create_project_project_name_label" >
        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/create_project_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/favourite_margin" />

    <EditText
        android:id="@+id/create_project_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_project_project_description_label"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginLeft="@dimen/favourite_margin"
        android:layout_marginRight="@dimen/favourite_margin"
        android:lines="6" />
    
    <TextView
        android:id="@+id/goalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="Goal: 0 UAH"
        android:textSize="@dimen/text" />

    <SeekBar
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/favourite_margin"
        android:layout_marginRight="@dimen/favourite_margin"
        android:max="1000" />

    <RelativeLayout
        android:id="@+id/."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >            
            <Button
                android:id="@+id/takephoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textSize="@dimen/text_headline" />
            <ImageView
                android:id="@+id/photo_preview1"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:contentDescription="@string/project_photo" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
